# cpp_base_mipt_2023_autumn

./: CMakeLists.txt  Makefile  README.md  main.cpp
01/: CMakeLists.txt  main.cpp
01/libphonetic/: CMakeLists.txt
01/libphonetic/include/: phonetic.hpp
01/libphonetic/source/: phonetic.cpp  phonetic_test.cc
02/: CMakeLists.txt  main.cpp
02/libstemmer/: CMakeLists.txt
02/libstemmer/include/: stemmer.hpp
02/libstemmer/source/: stemmer.cpp  tests.cc
03/liballoc/: CMakeLists.txt
03/liballoc/include/: alloc.hpp
03/liballoc/src/: alloc.cpp  tests.cc
1/: Makefile  main.cpp  printer.cpp  printer.h
2/: CMakeLists.txt  main.cpp
2/libfib/: CMakeLists.txt
2/libfib/include/: fib.h
2/libfib/src/: fib.cc  fib_test.cc
3/: CMakeLists.txt  main.cpp  point.hpp  scoped_ptr.hpp
my/: CMakeLists.txt  Makefile
my/include/my/: utils.h
my/src/: utils.cpp  utils_test.cpp
